# ChangeLog for sys-kernel/git-sources
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.841 2010/06/06 16:12:36 mpagano Exp $

*git-sources-2.6.35_rc2 (06 Jun 2010)
*git-sources-2.6.35_rc1-r5 (06 Jun 2010)

  06 Jun 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.35_rc1-r5.ebuild, +git-sources-2.6.35_rc2.ebuild:
  Version bumps

*git-sources-2.6.35_rc1-r4 (05 Jun 2010)

  05 Jun 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.35_rc1-r4.ebuild:
  Version bump

*git-sources-2.6.35_rc1-r3 (05 Jun 2010)

  05 Jun 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.35_rc1-r3.ebuild:
  Version bump

*git-sources-2.6.35_rc1-r2 (04 Jun 2010)

  04 Jun 2010; Michael Pagano <mpagano@gentoo.org>
  -git-sources-2.6.34-r1.ebuild, -git-sources-2.6.34-r2.ebuild,
  -git-sources-2.6.34-r3.ebuild, -git-sources-2.6.34-r4.ebuild,
  -git-sources-2.6.34-r5.ebuild, -git-sources-2.6.34-r6.ebuild,
  -git-sources-2.6.34-r7.ebuild, -git-sources-2.6.34-r8.ebuild,
  -git-sources-2.6.34-r9.ebuild, -git-sources-2.6.34-r10.ebuild,
  -git-sources-2.6.34-r11.ebuild, -git-sources-2.6.34-r12.ebuild,
  -git-sources-2.6.34-r13.ebuild, -git-sources-2.6.34-r14.ebuild,
  -git-sources-2.6.34-r15.ebuild, -git-sources-2.6.34-r16.ebuild,
  +git-sources-2.6.35_rc1-r2.ebuild:
  Version bump and old version cleanup

*git-sources-2.6.35_rc1-r1 (02 Jun 2010)

  02 Jun 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.35_rc1-r1.ebuild:
  Version bump

  01 Jun 2010; Robin H. Johnson <robbat2@gentoo.org> metadata.xml:
  Bug #322327: deblob-2.6.34 missing from Manifest

*git-sources-2.6.35_rc1 (31 May 2010)

  31 May 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.35_rc1.ebuild:
  Version bump

*git-sources-2.6.34-r16 (30 May 2010)

  30 May 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34-r16.ebuild: