@@ -8,6 +8,7 @@ DIST patch-2.6.35-rc1-git3.bz2 596094 RMD160 9ef9ab691e294f719640ce27ac7ec0aaeca
 DIST patch-2.6.35-rc1-git4.bz2 602047 RMD160 ebcfed7b08c4746c3596531f0d934d174dbfb6ca SHA1 e69dcba147ef991a2f345ff736d1a9e46f938d8c SHA256 fe97cfe1d435cd54371d68b63aff88b15051e3ba1528085c22f38f3635da5df3
 DIST patch-2.6.35-rc1-git5.bz2 623773 RMD160 836a6efa75359d20bdd904825cc72c9bbb8157a9 SHA1 ff2e6b02e4322a14f17bd3ebf8dc0cdc490d3913 SHA256 adea21888b5c275df9afeb0f5b22729403cd8b169ced765ae84f102ca3fdb712
 DIST patch-2.6.35-rc1.bz2 7021015 RMD160 60604f5fe50d22572feb0cb646a6d1caea8001a2 SHA1 7a10dbdf16f7f8ebf8ae3723833f09735b8413fa SHA256 79a2f43d53d1542f59ce76c7ea40741f80944181ee2634be9e344fb38d27f94d
+DIST patch-2.6.35-rc2-git1.bz2 507 RMD160 5f1cdcbf3a195dd90a7a4586403932cac19d987e SHA1 03edb6e90e981b363825dedd2e75ff5316456e2d SHA256 b896a5a0a41385bc1dcd1c3d1e5bb01d2f14bc5140ed4e2b2ce4d62003b3ebbd
 DIST patch-2.6.35-rc2.bz2 7553440 RMD160 1e34784f0a7ecad657c851ea08c585fbab767697 SHA1 72dba82a3aa210e790a9d082a2421a91a85a30a2 SHA256 1ea41efa9a50d16a7952f64db1cf18cc342f10cb1e742965a074f8e8e5805a39
 EBUILD git-sources-2.6.35_rc1-r1.ebuild 1246 RMD160 0fc852ba94a56c507b6e44817c7fe99b70e65c84 SHA1 4be102b25db4647d428977723d2aed2476b3ae81 SHA256 9be553978231b09616bff0297bcf238d51918cae6030c3b0804e65190492e82b
 EBUILD git-sources-2.6.35_rc1-r2.ebuild 1246 RMD160 1175bce4f48fd7112cedf75f001945a536a4c064 SHA1 6b2d23e4c7c0933965a4bb1af4ce45759e109600 SHA256 0be82327b512336dd743fb4aa468ff176aff29f065590fe5ea432d46db409ee1
@@ -15,13 +16,14 @@ EBUILD git-sources-2.6.35_rc1-r3.ebuild 1246 RMD160 ad85455436d29b81fd0f93d7996e
 EBUILD git-sources-2.6.35_rc1-r4.ebuild 1246 RMD160 7a3b7ca063ae113cc36fadcd09e2c73e4117088d SHA1 7aed7b4db8dc671beb6d3fab18bed6880db57160 SHA256 7237b7aca2b30c409d029f836acf0257b37236f12cbbd45ea5feb29f465fb93d
 EBUILD git-sources-2.6.35_rc1-r5.ebuild 1246 RMD160 e9b09483a00278305e31b3353356e56c1b1d3c14 SHA1 ab2c10aacf586a168a8d33286296a9720cdf8534 SHA256 1251e2595db246fbdbdbe472e8e42387b5a6ca614b5bccec96a88aee104b3082
 EBUILD git-sources-2.6.35_rc1.ebuild 1243 RMD160 237046851314a6cd25bb406baebe2678b4558edb SHA1 9e986d34aa001af5162cdcfbf63c0849c874aa49 SHA256 e57516962f9670c430eb5f873434ce2c30526a67ddd03343c1ffe7d618984aca
+EBUILD git-sources-2.6.35_rc2-r1.ebuild 1246 RMD160 a09dc4b57f76668fda857687bce403f2f21ab74b SHA1 669e447a27c5436e63b81281792ae591fc755c1d SHA256 1c0692a87a66c6dee4bb859353cc810c91d764e805aa67d4cb7ef96f172e2fdc
 EBUILD git-sources-2.6.35_rc2.ebuild 1243 RMD160 d0f1a885b1018188afe37af96e1bc746703f775b SHA1 03f51e1dbcad8d27def602a0e374f172882d3797 SHA256 9eb5eab8db66f09aa0d3918c7a557e89c5315e7534f5080301a93263527a07c3
-MISC ChangeLog 161400 RMD160 f5a706427cc7e45467be15bc2edc09ab5c62e615 SHA1 037ac5c42cd70e878933e39c258975c0da15bff3 SHA256 9572e00cf8fbe5e792e83b380e6a3b31106e6dd6ae47ef90f41e8080d2180163
+MISC ChangeLog 161546 RMD160 6c2d812c27732fd7a21de52588a67102da06bf3d SHA1 00b568c29a125d98b4c324051d2def9015db1dd1 SHA256 673ccf69749c7e7937057b8d17404c52cfda5aa1bfa90a98eaaba3f1da36d898
 MISC metadata.xml 567 RMD160 e4aa86f6f16e102f0e0704afd106f06c92662374 SHA1 d7d65c3a36a62994e6bf60d4d7e101971ec8feb8 SHA256 5e47ce9a1dc6123cba8515903fa09559bf76a652c79e248bc940ec154fb03546
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.15 (GNU/Linux)
+Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkwLyP4ACgkQPDPGULV25ON5FACeLWZ86+cL3rKoxAcP7BquPWxu
-/vsAn0PLamyRmCVrCaqq2MsxFseh9fBL
-=VLVZ
+iEYEARECAAYFAkwM7JcACgkQPDPGULV25OPdYwCeMBnuQkf6JXo7z2F5rvrO3Int
+R4kAoLlLy3pjV1reIKhtCb+Toi7ah2Rs
+=3qmz
 -----END PGP SIGNATURE-----
