@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.841 2010/06/06 16:12:36 mpagano Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.842 2010/06/07 12:55:37 mpagano Exp $
+
+*git-sources-2.6.35_rc2-r1 (07 Jun 2010)
+
+  07 Jun 2010; Michael Pagano <mpagano@gentoo.org>
+  +git-sources-2.6.35_rc2-r1.ebuild:
+  Version bump
 
 *git-sources-2.6.35_rc2 (06 Jun 2010)
 *git-sources-2.6.35_rc1-r5 (06 Jun 2010)
